# cardinal-agent-plugins

./: .gitignore  README.md
.github/workflows/: omnigent-drift.yml  release-mirrors.yml  release.yml
adapters/: README.md
adapters/claude/: .mcp.json  CORE_GAPS.md  REPORT.md
adapters/claude/.claude-plugin/: plugin.json
adapters/claude/agents/: brainstorm.md
adapters/claude/hooks/: _limits.py  _otel_settings.py  _plan_cache.py  _plugin_version.py  git-state.py  hooks.json  initiative-convention.py  invariant-check.py  limits-gate.py  plan-state.py  plan-usage.py  subagent-usage.py  turn-usage.py
adapters/claude/tests/: capture_goldens.py  fixtures.py  test_cardinal_plugin.py  test_install_site.py  test_parity.py  test_plan_state.py  test_subagent_usage.py  test_turn_usage.py
adapters/codex/: REPORT.md
adapters/codex/tests/: capture_goldens.py  fixtures.py  test_parity.py
adapters/cursor/: CORE_GAPS.md  REPORT.md
adapters/cursor/.cursor-plugin/: plugin.json
adapters/cursor/hooks/: cardinal-cursor-telemetry.py
adapters/cursor/tests/: capture_goldens.py  fixtures.py  test_parity.py
adapters/gemini/: CORE_GAPS.md  README.md  REPORT.md
adapters/gemini/.gemini-plugin/: plugin.json
adapters/gemini/extension/: GEMINI.md  gemini-extension.json
adapters/gemini/hooks/: _plugin_version.py  cardinal-gemini-telemetry.py
adapters/omnigent/: CORE_GAPS.md  README.md  pyproject.toml
adapters/omnigent/cardinal_omnigent/: __init__.py  _events.py  _identity.py  _subagent.py  connect.py  spend_limits.py  telemetry.py
adapters/omnigent/tests/: fixtures.py  test_omnigent.py
core/: README.md  pyproject.toml
core/cardinal_core/: __init__.py  deviceflow.py  limits.py  otlp.py  paths.py  session.py
core/git-hooks/: README.md  pre-commit-hook.sh  pre-commit-install.sh
core/tests/: harness.py  test_core.py
docs/: RELEASING.md
docs/specs/: agent-core.md  core-gaps-followup.md  omnigent-adapter.md  site-install-skill.md  subagent-telemetry-enrichment.md  toolkit-hive-mind.md
tests/: test_contract.py
(+57 files in other folders)
