[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cardinal-agent-core"
version = "0.2.0"
description = "The Cardinal agent-telemetry contract: OTLP emission, initiative resolution, spend-limits delivery, device-code consent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "CardinalHQ", email = "support@cardinalhq.io" }]

[project.urls]
Homepage = "https://github.com/cardinalhq/cardinal-agent-plugins"

[tool.setuptools.packages.find]
include = ["cardinal_core*"]
